# xmf

./: .gitignore  README.md
python/: demo_script_01_standard_shapes.ipynb  demo_script_02_generate_shapes.ipynb  demo_script_03_fit.ipynb  demo_script_03_fit_simulation_data_with_opt.ipynb  demo_script_03_fit_simulation_data_with_tol.ipynb  demo_script_03_fit_without_lmfit.ipynb  demo_script_04_fit_real_data.ipynb  demo_script_04_fit_real_data_with_opt.ipynb  demo_script_04_fit_real_data_with_tol.ipynb  demo_script_04_fit_simulation_data_with_tol.ipynb  demo_script_05_fit_real_data_with_opt.ipynb  demo_script_06_fit_real_data_with_tol.ipynb  pyproject.toml
python/_build/markdown/: example_codes.md  framework.md  index.md  sg_execution_times.md
python/docs/: conf.py  example_codes.rst  framework.rst  index.rst
python/docs/auto_examples/: demo_script_03_fit_simulation_data_with_opt.codeobj.json  demo_script_03_fit_simulation_data_with_opt.ipynb  demo_script_03_fit_simulation_data_with_opt.py.md5  demo_script_04_fit_simulation_data_with_tol.py.md5  example_01_fit_concave_ellipsoid_with_tol.ipynb  example_01_fit_concave_ellipsoid_with_tol.py  example_01_fit_concave_ellipsoid_with_tol.py.md5  example_01_fit_concave_elliptic_cylinder_with_opt.rst  example_01_fit_convex_hyperbolic_cylinder_with_tol.py.md5  example_02_fit_concave_ellipsoid_with_tol.py.md5  example_02_fit_concave_hyperboloid_with_opt.py.md5  index.rst  sg_execution_times.rst  (+20 more)
python/xmf/: __init__.py  fig_show.py  layer_01_standard.py  layer_02_generation.py  layer_03_optimization.py  layer_04_fit.py
(+332 files in other folders)
